# Bidx_pc

./: .env.example  .env.local.codexzh.com  .env.local.pack  .env.local.ssopen  .env.local_gpt  .env.local_oMlx  .env.local_qwen  .gitignore  AGENTS.md  CLAUDE.md  LLM_Integration_Reference.md  README.md  RESTful_API_DESIGN.md  TODOS  bid-writer.spec  config.example.yaml  config.yaml  config_706-15号楼研究生公寓配套家具-招标文件-发售稿(1).yaml  config_706-15号楼研究生公寓配套家具-招标文件-发售稿(1).yaml.bak  config_chatgpt.yaml  config_child.yaml  config_child.yaml.bak  config_gemini.yaml  config_公共服务满意度.yaml  config_公共服务满意度_auto.yaml  config_公共服务满意度_auto.yaml.bak  config_公共服务满意度_full_context.yaml  config_公共服务满意度_hybrid_extract.yaml  config_公共服务满意度_hybrid_extract_full.yaml  config_应急.yaml  config_新项目.yaml  config_新项目.yaml.bak  config_社会救助.yaml  config_统计台账.yaml  config_统计台账.yaml.bak  config_藤县民政局.yaml  config_藤县民政局.yaml.bak  config_麻城民政.yaml  debug_titles.py  debug_titles2.py  (+15 more)
.claude/: settings.local.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
bid_writer/: __init__.py  ai_writer.py  chapter_dependency_store.py  chapter_fact_extractor.py  chapter_fact_store.py  chapter_summary_generator.py  chapter_summary_store.py  chapter_writing_plan.py  config.py  config_editor.py  config_editor_dialog.py  config_editor_tooltips.py  context_pruner.py  embedding_store.py  env_local_prompt.py  fact_card_dialogs.py  fact_card_extractor.py  fact_card_store.py  fact_cards.py  file_saver.py  generation_trace.py  gui.py  gui_adapter.py  gui_state.py  h2_project_background.py  history.py  llm_verifier.py  (+27 more)
(+277 files in other folders)
