[project]
name = "bid-writer"
version = "1.0.0"
description = "自动标书撰写系统 - 基于AI的智能标书内容生成工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "ttkbootstrap>=1.14.0",
]

[project.scripts]
bid-writer = "bid_writer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bid_writer"]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
